feat(api): add proxy_url support to Source
Adds a proxy_url field to the Source model and enables validation
to ensure it follows the host:port format.

Relates to JIRA: DISCOVERY-443
